# helpdesk-x3

./: .env.exemple  .gitignore  README.md  pyproject.toml
accounts/: context_processors.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_customer.py
accounts/templates/accounts/: _register.html  login.html  register.html
contacts/: admin.py  forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: index.html
core/: views.py
core/decorators/: cache_db.py
core/templates/: base.html
core/templates/core/: home.html
core/templates/includes/: _footer.html  _header.html  _sidebar.html
core/utils/: customer_data.py  database.py
global_static/global/css/: styles.css
global_templates/global/: base.html
global_templates/global/includes/: footer.html  navbar.html
setup/: routers.py  settings.py  urls.py
tickets/: legacy.py  models.py  urls.py  views.py
tickets/migrations/: 0001_initial.py
tickets/templates/tickets/: ticket_list.html
