[project]
authors = ['José Roberto Ferreira']
description = "HelpDesk X3 - Sistema de Suporte ao Cliente"
name = "helpdesk"
requires-python = ">=3.10"
version = "0.1.0"

[tool.taskipy.tasks]
run = "python manage.py runserver"
migrate = "python manage.py migrate"
make = "python manage.py makemigrations"
app = "python manage.py startapp"

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'